--- a/src/library.html
+++ b/src/library.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka</title>
+    <title>LIBRARY</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="./sass/library.scss" />
   </head>
+
   <body>
     <div class="wraper">
       <header class="header">
@@ -21,11 +24,10 @@
                     autocomplete="off"
                     placeholder="Movie search"
                   />
-                  <button class="button_search" type="submit"></button>
+                  <button class="button" type="submit">P</button>
                 </form>
+
                 <div>
-                  <!-- <button class="button-home" type="button">HOME</button> -->
-                  <!-- <button class="button-library" type="button">MY LIBRARY</button> -->
                   <button
                     class="button-home"
                     type="submit"
@@ -40,6 +42,11 @@
                   >
                     MY LIBRARY
                   </button>
+                </div>
+
+                <div>
+                  <button class="button_watched" type="button">WATCHED</button>
+                  <button class="button_queue" type="button">QUEUE</button>
                 </div>
               </div>
             </div>
@@ -86,14 +93,5 @@
         </main>
       </div>
     </div>
-    <div></div>
-
-    <!-- <button type="button"></button> -->
-
-    <script src="./js/index.js" type="module"></script>
-    <script src="./js/fetch_start.js" type="module"></script>
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/jquery/dist/jquery.min.map"></script> -->
-    <script src="./js/library.js" type="module"></script>
   </body>
 </html>
