--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
+    <!-- <div class="lib__watched-container"></div> -->
+
     <div class="wraper">
       <header class="header">
         <section class="header-section">
@@ -23,6 +25,8 @@
                   />
                   <button class="button_search" type="submit"></button>
                 </form>
+                <div class="form-text"></div>
+
                 <div>
                   <!-- <button class="button-home" type="button">HOME</button> -->
                   <!-- <button class="button-library" type="button">MY LIBRARY</button> -->
@@ -47,53 +51,57 @@
         </section>
       </header>
 
-      <div class="gallery-start_1">
-        <div class="gallery-start">
-          <!-- Картки зображень -->
-        </div>
+      <div class="container-main">
+        <div class="gallery-start_1">
+          <div class="gallery-start">
+            <!-- Картки зображень -->
+          </div>
 
-        <div class="gallery"></div>
+          <div class="gallery"></div>
 
-        <main class="main">
-          <section class="section-main">
-            <ul class="container-films collection list"></ul>
-            <!-- пагінація -->
-            <!-- <div class="pagination">
+          <main class="main">
+            <section class="section-main">
+              <ul class="container-films collection list"></ul>
+              <!-- пагінація -->
+              <!-- <div class="pagination">
               <button class="pagination__prev"><<</button>
               <ul class="pagination__list"></ul>
               <button class="pagination__next">>></button>
             </div> -->
 
-            <div class="modal">
-              <div class="modal__overlay"></div>
-              <div class="modal__content">
-                <!-- <img
+              <div class="modal">
+                <div class="modal__overlay"></div>
+                <div class="modal__content">
+                  <!-- <img
                   class="img-modal"
                   src="./images/abstract-background-with-red-lines 1.jpg"
                   alt="Movie Poster"
                 /> -->
-                <div class="movie-details_modal">
-                  <div class="text-details_modal">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
+                  <div class="movie-details_modal">
+                    <div class="text-details_modal">
+                      <h2></h2>
+                      <p></p>
+                      <p></p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </section>
-          <!-- <img class="error-img" src="./images/internet-error.gif" alt="error" /> -->
-        </main>
+            </section>
+            <!-- <img class="error-img" src="./images/internet-error.gif" alt="error" /> -->
+          </main>
+        </div>
       </div>
     </div>
     <div></div>
 
     <!-- <button type="button"></button> -->
-
+    <!-- <script src="./js/library.js" type="module"></script> -->
     <script src="./js/index.js" type="module"></script>
     <script src="./js/fetch_start.js" type="module"></script>
+
     <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/jquery/dist/jquery.min.map"></script> -->
-    <script src="./js/library.js" type="module"></script>
+
+    <!-- <script src="./js/library.js" type="module"></script> -->
   </body>
 </html>
