--- a/src/library.html
+++ b/src/library.html
@@ -16,17 +16,6 @@
           <div class="container">
             <div class="header-navigation">
               <div class="header-wrap_home">
-                <form class="search-form" id="search-form">
-                  <input
-                    class="input"
-                    type="text"
-                    name="searchQuery"
-                    autocomplete="off"
-                    placeholder="Movie search"
-                  />
-                  <button class="button" type="submit">P</button>
-                </form>
-
                 <div>
                   <button
                     class="button-home"
@@ -44,9 +33,31 @@
                   </button>
                 </div>
 
-                <div>
-                  <button class="button_watched" type="button">WATCHED</button>
-                  <button class="button_queue" type="button">QUEUE</button>
+                <div class="button-watchq-ueue">
+                  <div>
+                    <button class="button__libraty-watched" type="button">
+                      WATCHED
+                    </button>
+                  </div>
+
+                  <div>
+                    <button class="button__library-queue" type="button">
+                      QUEUE
+                    </button>
+
+                    <!-- <div class="modal">
+                      <div class="modal__overlay"></div>
+                      <div class="modal__content">
+                        <div class="queue-container">
+                          <div class="text-details_modal">
+                            <h2></h2>
+                            <p></p>
+                            <p></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div> -->
+                  </div>
                 </div>
               </div>
             </div>
@@ -54,44 +65,35 @@
         </section>
       </header>
 
-      <div class="gallery-start_1">
-        <div class="gallery-start">
-          <!-- Картки зображень -->
-        </div>
-
-        <div class="gallery"></div>
-
-        <main class="main">
-          <section class="section-main">
-            <ul class="container-films collection list"></ul>
-            <!-- пагінація -->
-            <!-- <div class="pagination">
-              <button class="pagination__prev"><<</button>
-              <ul class="pagination__list"></ul>
-              <button class="pagination__next">>></button>
-            </div> -->
-
-            <div class="modal">
-              <div class="modal__overlay"></div>
-              <div class="modal__content">
-                <!-- <img
+      <main class="main-library">
+        <section class="section-main">
+          <div class="modal">
+            <div class="modal__overlay"></div>
+            <div class="modal__content">
+              <!-- <img
                   class="img-modal"
                   src="./images/abstract-background-with-red-lines 1.jpg"
                   alt="Movie Poster"
                 /> -->
-                <div class="movie-details_modal">
-                  <div class="text-details_modal">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                  </div>
+              <div class="movie-details_modal">
+                <div class="text-details_modal">
+                  <h2></h2>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </div>
-          </section>
-          <!-- <img class="error-img" src="./images/internet-error.gif" alt="error" /> -->
-        </main>
-      </div>
+          </div>
+
+          <div class="lib__watched-container"></div>
+          <div class="lib__queue-container"></div>
+
+          <div class="empty-page"></div>
+          <p class="empty-text">There is nothing on this page yet</p>
+        </section>
+      </main>
     </div>
+
+    <script src="./js/library.js" type="module"></script>
   </body>
 </html>
