--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </section>
       </header>
 
-      <div class="container-main">
+      <div class="container">
         <div class="gallery-start_1">
           <div class="gallery-start">
             <!-- Картки зображень -->
