--- a/src/library.html
+++ b/src/library.html
@@ -44,19 +44,6 @@
                     <button class="button__library-queue" type="button">
                       QUEUE
                     </button>
-
-                    <!-- <div class="modal">
-                      <div class="modal__overlay"></div>
-                      <div class="modal__content">
-                        <div class="queue-container">
-                          <div class="text-details_modal">
-                            <h2></h2>
-                            <p></p>
-                            <p></p>
-                          </div>
-                        </div>
-                      </div>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -65,16 +52,11 @@
         </section>
       </header>
 
-      <main class="main-library">
+      <main class="main-library container">
         <section class="section-main">
           <div class="modal">
             <div class="modal__overlay"></div>
             <div class="modal__content">
-              <!-- <img
-                  class="img-modal"
-                  src="./images/abstract-background-with-red-lines 1.jpg"
-                  alt="Movie Poster"
-                /> -->
               <div class="movie-details_modal">
                 <div class="text-details_modal">
                   <h2></h2>
@@ -85,11 +67,14 @@
             </div>
           </div>
 
-          <div class="lib__watched-container"></div>
-          <div class="lib__queue-container"></div>
+          <div class="library-gallery">
+            <div class="lib__watched-container"></div>
+            <div class="lib__queue-container"></div>
 
-          <div class="empty-page"></div>
-          <p class="empty-text">There is nothing on this page yet</p>
+            <!-- <div class="empty-page"> -->
+            <!-- <p class="empty-text">There is nothing on this page yet</p> -->
+            <!-- </div> -->
+          </div>
         </section>
       </main>
     </div>
