--- a/src/index.html
+++ b/src/index.html
@@ -92,16 +92,35 @@
         </div>
       </div>
     </div>
-    <div></div>
 
-    <!-- <button type="button"></button> -->
-    <!-- <script src="./js/library.js" type="module"></script> -->
+    <!-- === пагінація -->
+
+    <!-- <div class="pagination">
+      <ul class="pagination__list"></ul>
+    </div> -->
+
+    <!-- <div id="pagination"></div> -->
+
+    <!-- <div id="tui-pagination-container" class="tui-pagination"></div> -->
+    <div id="tui-pagination-container" class="tui-pagination">
+      <div class="tui-pagination-pages"></div>
+      <div class="tui-pagination-info"></div>
+    </div>
+
+    <!-- ===футер -->
+
+    <div class="footer__container container">
+      <p class="footer__copyright">&copy; 2023 | All Rights Reserved |</p>
+      <div class="footer__team">
+        Developed with
+        <img class="footer__icon" src="./images/heart.svg" alt="heart" />
+        by
+        <p class="footer__team-link" data-action="open-modal">GoIT Students</p>
+      </div>
+    </div>
+
     <script src="./js/index.js" type="module"></script>
     <script src="./js/fetch_start.js" type="module"></script>
-
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/jquery/dist/jquery.min.map"></script> -->
-
-    <!-- <script src="./js/library.js" type="module"></script> -->
+    <!-- <script src="./js/pagination.js" type="module"></script> -->
   </body>
 </html>
