--- a/src/library.html
+++ b/src/library.html
@@ -79,6 +79,17 @@
       </main>
     </div>
 
+    <!-- =========footer=========== -->
+    <div class="footer__container container">
+      <p class="footer__copyright">&copy; 2023 | All Rights Reserved |</p>
+      <div class="footer__team">
+        Developed with
+        <img class="footer__icon" src="./images/heart.svg" alt="heart" />
+        by
+        <p class="footer__team-link" data-action="open-modal">GoIT Students</p>
+      </div>
+    </div>
+
     <script src="./js/library.js" type="module"></script>
   </body>
 </html>
